--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ pyOpenSSL==17.5.0
 pytest==3.5.0
 queuelib==1.5.0
 Scrapy==1.5.0
+scrapy-mongodb==0.12.0
 service-identity==17.0.0
 six==1.11.0
 Twisted==18.4.0
