--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ PyDispatcher==2.0.5
 pymongo==3.6.1
 pyOpenSSL==17.5.0
 pytest==3.5.0
+python-dotenv==0.8.2
 queuelib==1.5.0
 Scrapy==1.5.0
 scrapy-mongodb==0.12.0
